post to mismates/new writes to db successfully

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
         <input type="radio" id="right" name="side" value="right">
       </div>
       <label for="has-box">Has matching box?</label>
-      <input type="checkbox" id="has-box" name="has-box">
+      <input type="checkbox" id="has-box" name="hasBox">
       <input type="submit" value="Submit">
     </form>
   </body>
