--- a/server/views/index.html
+++ b/server/views/index.html
@@ -6,7 +6,7 @@
   <body>
     <form action="/mismates/new" method="post">
       <label for="scan">Scan</label>
-      <input type="text" id="scan" name="scan">
+      <input type="text" id="sku" name="sku">
       <label for="side">Which side foot?</label>
       <div id="side">
         <label for="left">Left</label>
