--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,11 +21,46 @@ nav {
   display: flex;
   background-color: black;
   height: 5vh;
+  width: 100%;
   padding: 1em;
+}
+
+#menu-toggle {
+  visibility: hidden;
 }
 
 #nav-menu {
   display: none;
+}
+
+#menu-button-container {
+  display: flex;
+  height: 100%;
+  width: 27px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#menu-button,
+#menu-button::before,
+#menu-button::after {
+  display: block;
+  background-color: #fff;
+  position: absolute;
+  height: 3px;
+  width: 27px;
+}
+
+#menu-button::before {
+  content: "";
+  margin-top: -9px;
+}
+
+#menu-button::after {
+  content: "";
+  margin-top: 9px;
 }
 
 #menu-toggle:checked ~ #nav-menu {
@@ -47,6 +82,20 @@ nav {
   font-weight: bold;
   text-decoration: none;
   border-bottom: 1px solid rgb(77, 77, 77);
+}
+
+#menu-toggle:checked + label #menu-button::before {
+  margin-top: 0px;
+  transform: rotate(405deg);
+}
+
+#menu-toggle:checked + label #menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + label #menu-button::after {
+  margin-top: 0px;
+  transform: rotate(-405deg);
 }
 
 @media only screen and (min-width: 768px) {
