--- a/client/src/styles/_NavBar.scss
+++ b/client/src/styles/_NavBar.scss
@@ -3,7 +3,7 @@
 nav {
     display: flex;
     background-color: black;
-    height: 5vh;
+    height: 30px;
     width: 100%;
     padding: 1em;
 }
@@ -51,7 +51,7 @@ nav {
     display: flex;
     position: absolute;
     left: 0;
-    top: 5vh;
+    top: 46px;
     width: 100%;
     flex-direction: column;
     justify-content: space-between;
@@ -70,7 +70,7 @@ nav {
 
 #menu-toggle:checked + label #menu-button::before {
     margin-top: 0px;
-    transform: rotate(405deg);
+    transform: rotate(45deg);
 }
 
 #menu-toggle:checked + label #menu-button {
@@ -79,7 +79,7 @@ nav {
   
 #menu-toggle:checked + label #menu-button::after {
     margin-top: 0px;
-    transform: rotate(-405deg);
+    transform: rotate(-45deg);
 }
 
 @media only screen and (min-width: $min-viewport) {
