--- a/client/src/App.css
+++ b/client/src/App.css
@@ -128,31 +128,24 @@ nav {
   text-align: center;
 }
 
-.mismate-div {
-  text-align: center;
+#table-container {
+  overflow-x: scroll;
 }
 
-@media only screen and (min-width: 768px) {
-  .mismate-div {
-    background-color: white;
-    border: 1px solid rgb(77, 77, 77);
-    margin: auto;
-    padding: 10px;
-    width: 768px;
-  }
-  #mismate-table {
-    border-collapse: collapse;
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
-    width: 768px;
-  }
-  th:not(#form-header), .mismate-row td:not(.row-form, .row-buttons) {
-    background-color: white;
-    border: 1px solid rgb(77, 77, 77);
-  }
+#mismate-table {
+  border-collapse: collapse;
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+  width: 768px;
 }
+
+th:not(#form-header), .mismate-row td:not(.row-form, .row-buttons) {
+  background-color: white;
+  border: 1px solid rgb(77, 77, 77);
+}
+
 body {
   margin: 0;
   padding: 0;
