--- a/client/src/styles/_MismateTable.scss
+++ b/client/src/styles/_MismateTable.scss
@@ -4,30 +4,32 @@
     text-align: center;
 }
 
-.mismate-div {
-    text-align: center;
+// .mismate-div {
+//     text-align: center;
+// }
+
+// .mismate-div {
+//     background-color: $background-color;
+//     border: 1px solid $border-color;
+//     margin: auto;
+//     padding: 10px;
+//     width: $min-viewport;
+// }
+
+#table-container {
+    overflow-x: scroll;
 }
 
-@media only screen and (min-width: $min-viewport) {
-    .mismate-div {
-        background-color: $background-color;
-        border: 1px solid $border-color;
-        margin: auto;
-        padding: 10px;
-        width: $min-viewport;
-    }
-    
-    #mismate-table {
-        border-collapse: collapse;
-        margin: auto;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding: 10px;
-        width: $min-viewport;
-    }
-    
-    th:not(#form-header), .mismate-row td:not(.row-form, .row-buttons) {
-        background-color: $background-color;
-        border: 1px solid $border-color;
-    }
+#mismate-table {
+    border-collapse: collapse;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+    width: $min-viewport;
+}
+
+th:not(#form-header), .mismate-row td:not(.row-form, .row-buttons) {
+    background-color: $background-color;
+    border: 1px solid $border-color;
 }
