added css for navigation links in desktop view

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,9 +20,13 @@
 nav {
   display: flex;
   background-color: black;
-  height: 30px;
-  width: 100%;
-  padding: 1em;
+  height: 70px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 0;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #menu-toggle {
@@ -68,20 +72,25 @@ nav {
   display: flex;
   position: absolute;
   left: 0;
-  top: 46px;
+  top: 54px;
   width: 100%;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
   padding: 0;
 }
 #menu-toggle:checked ~ #nav-menu a {
-  padding: 1em;
   text-align: center;
+  width: 100%;
+  padding: 1em;
   color: black;
   font-family: Calibri, sans-serif;
   font-weight: bold;
   text-decoration: none;
   border-bottom: 1px solid rgb(77, 77, 77);
+}
+#menu-toggle:checked ~ #nav-menu a:hover {
+  background-color: rgb(218, 218, 218);
 }
 
 #menu-toggle:checked + label #menu-button::before {
@@ -99,6 +108,9 @@ nav {
 }
 
 @media only screen and (min-width: 768px) {
+  nav {
+    justify-content: flex-start;
+  }
   #nav-menu {
     display: contents;
   }
@@ -106,20 +118,31 @@ nav {
     display: none;
   }
   #nav-menu a {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    font-family: Calibri;
+    text-decoration: none;
     color: white;
     font-weight: normal;
     border-style: none;
-    align-self: center;
+    height: 100%;
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+  #nav-menu a:hover {
+    background-color: grey;
   }
 }
+#mismate-form {
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 @media only screen and (min-width: 768px) {
   #mismate-form {
     background-color: white;
     border: 1px solid rgb(77, 77, 77);
-    margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
     padding: 10px;
     width: 256px;
   }
@@ -149,7 +172,7 @@ th:not(#form-header), .mismate-row td:not(.row-form, .row-buttons) {
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(207, 207, 207);
+  background-color: rgb(255, 255, 255);
 }
 
 #root {
