--- a/client/src/styles/_MismateForm.scss
+++ b/client/src/styles/_MismateForm.scss
@@ -1,12 +1,15 @@
 @import './variables';
 
+#mismate-form {
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 @media only screen and (min-width: $min-viewport) {
     #mismate-form {
         background-color: $background-color;
         border: 1px solid $border-color;
-        margin: auto;
-        margin-top: 10px;
-        margin-bottom: 10px;
         padding: 10px;
         width: 256px;
     }
