--- a/client/src/App.css
+++ b/client/src/App.css
@@ -134,17 +134,21 @@ nav {
   }
 }
 #mismate-form {
+  box-sizing: border-box;
+  padding: 2rem;
   margin: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 1rem;
+  display: grid;
+  gap: 1rem;
 }
 
 @media only screen and (min-width: 768px) {
   #mismate-form {
     background-color: white;
     border: 1px solid rgb(77, 77, 77);
-    padding: 10px;
-    width: 256px;
+    padding: 1rem;
+    width: 20rem;
+    margin-top: 1rem;
   }
 }
 #loading-message, #no-mismates {
