--- a/client/src/styles/_MismateForm.scss
+++ b/client/src/styles/_MismateForm.scss
@@ -1,16 +1,20 @@
 @import './variables';
 
 #mismate-form {
+    box-sizing: border-box;
+    padding: 2rem;
     margin: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 1rem;
+    display: grid;
+    gap: 1rem;
 }
 
 @media only screen and (min-width: $min-viewport) {
     #mismate-form {
         background-color: $background-color;
         border: 1px solid $border-color;
-        padding: 10px;
-        width: 256px;
+        padding: 1rem;
+        width: 20rem;
+        margin-top: 1rem;
     }
 }
